kubernetes/05_prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "a-cordes-letsencrypt"
spec:
  tls:
    - hosts:
      - "monitoring.acordes.shop"
      secretName: "a-cordes-monitoring-tls"
  rules:
    - host: monitoring.acordes.shop
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
                service:
                    name: prometheus-service
                    port:
                        number: 8080
